<resources>
    <string name="app_name">Aqua Manager</string>
    <string name="map_name">Map</string>
    <string name="settings_name">Settings</string>
    <string name="refresh_name">Refresh</string>
    <string name="title_activity_add_device">Add Device</string>
    <string name="title_activity_add_notif">New Notification</string>
    <string name="title_activity_new_device">Name Your Device</string>

    <string name="aquaid_hint">Aqua ID</string>
    <string name="passcode_hint">Passcode</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_passcode">Authentication Failed</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_aquaid">Authentication Failed</string>

    <string name="name_hint">My Aqua</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="geo_hint">My Geofence</string>

    <string name="notif_start">When &lt;?&gt; enters &lt;?&gt;, send &lt;?&gt; a &lt;?&gt;</string>

    <!-- Strings related to Settings -->

    <string name="geo_type_polygon">Polygon</string>
    <string name="geo_type_cicle">Circle</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home_geofences">HomeGeofences</string>
    <string name="title_activity_geofence_map">GeofenceMap</string>
    <string name="title_activity_new_geo_info">NewGeoInfo</string>
    <string name="title_activity_get_location_only">GetLocationOnly</string>
    <string name="title_activity_add_notif_select_device">AddNotifSelectDevice</string>
    <string name="title_activity_add_notif_select_trigger">AddNotifSelectTrigger</string>
    <string name="title_activity_add_notif_select_geo">AddNotifSelectGeo</string>
    <string name="title_activity_add_notif_select_mac">Enter Mac Address</string>
    <string name="title_activity_add_notif_select_alarm">AddNotifSelectAlarm</string>
    <string name="title_activity_remove_notif_from_id">RemoveNotifFromID</string>
    <string name="title_activity_notif_settings">NotifSettings</string>
    <string name="title_activity_device_raw_data">DeviceRawData</string>
    <string name="title_activity_view_raw_data">ViewRawData</string>
</resources>
